Add tooltips with answer on over sample. Add 2 exercices...

--- a/index.html
+++ b/index.html
@@ -86,14 +86,15 @@
         <div class="alert--warning"><h2>Documentation</h2>
             Documentation à télécharger
         </div>
-        <div class="alert row-2"><h2>Chaine youtube</h2>
-            Toute une série de petites vidéos montrant le fonctionnement de MathsMentales
+        <div class="alert row-2"><h2>Fiches d'entrainement</h2>
+            Ces fiches d'entrainement au calcul mental sont des fichiers LibreOffice.org Calc qui permettent de générer des milliers de fiches d'entrainement avec corrigé.
+            Des pages dédiées à ces fiches permettent de travailler ces exercices, en ligne.
             <div class="center">
                 <!--<iframe width="280" height="158" src="https://www.youtube.com/embed/Grm7sle0Bpg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
             </div>
         </div>
         <div class="col-2"><img src="img/logocm.png" width="320" style="margin-left: calc(50% - 160px);"></div>
-        <div class="alert--primary"><h2>Historique</h2>
+        <div class="alert--primary"><h2>Vidéos de démonstration</h2>
             Accès à l'historique de développement du site.
         </div>
         <div class="alert--success"><h2>Participer</h2>
