Ajout de 11 activités, correction de bugs

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             </li>
             <li><a href="#nothing">Lycée</a>
                 <ul>
-                    <li onclick="library.displayContent(2)"><a href="/?2nde">2nde</a></li>
-                    <li onclick="library.displayContent(1)"><a href="/?1ereES1">1ère ES1</a></li>
-                    <li onclick="library.displayContent(1)"><a href="/?1ereES2">1ère ES2</a></li>
-                    <li onclick="library.displayContent(0)"><a href="/?Tale">Tale</a></li>
+                    <li onclick="library.displayContent(2)">2nde</li>
+                    <li onclick="library.displayContent(1)"><a numero="1ereES1">1ère ES1</a></li>
+                    <li onclick="library.displayContent(1)"><a numero="1ereES2"></a>1ère ES2</a></li>
+                    <li onclick="library.displayContent('T')">Tale</li>
                 </ul>
             </li>
         </ul>
