Travail sur les URL, réflexion sur la migration MMv1 => MMv2

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="js/libs/chartjs/Chart.bundle.min.js"></script>
     <script src="js/libs/underscore-min.js"></script>
     <script src="js/libs/kas.js" defer></script>
+    <script src="js/MM1toMM2.min.js"></script>
     <script src="js/lib.mathsmentales.js" type="text/javascript" defer></script>
 </head>
 <body>
