Feuilles d'interro, j'ai qui a, dominos

--- a/index.html
+++ b/index.html
@@ -206,9 +206,10 @@
                 <option value="paramsdiapo" selected="selected">Diaporama</option>
                 <option value="paramsexos">Feuille d'exercices</option>
                 <option value="paramsinterro">Feuille d'interro</option>
-                <option value="paramsceinture">Ceintures de CM</option>
+                <!--<option value="paramsceinture">Ceintures de CM</option>-->
                 <option value="paramsflashcards">Cartes flash</option>
                 <option value="paramswhogots">J'ai/qui a ?</option>
+                <option value="paramsdominos">Dominos</option>
             </select>
             <fieldset><legend>Clé de données</legend>
                 <input type="text" placeholder="eHDtp" id="aleaKey" size="10">
@@ -295,7 +296,7 @@
                 <button class="button--primary beaubutton" onclick="MM.createExamSheet();">Générer</button>
             </section>
         </div>
-        <div id="paramsceinture" class="hidden">
+        <!--<div id="paramsceinture" class="hidden">
             <fieldset>
                 <legend>Titre de la ceinture</legend>
                 <input type="text" placeholder="Interrogation écrite" id="ceinttitle">
@@ -311,15 +312,11 @@
             <section>
                 <button class="button--primary beaubutton" onclick="MM.createCeintureSheet();">Générer</button>
             </section>
-        </div>
+        </div>-->
         <div id="paramsflashcards" class="hidden">
             <fieldset>
                 <legend>Titre de la page</legend>
                 <input type="text" placeholder="Je retiens les..." id="FCtitle">
-            </fieldset>
-            <fieldset>
-                <legend>Nb de cartes : <span id="FCnb" class="blue">16</span></legend>
-                <input type="range" min="5" max="60" step="1" value="16" oninput="document.getElementById('FCnb').innerHTML=this.value;">
             </fieldset>
             <section>
                 <button class="button--primary beaubutton" onclick="MM.createFlashCards();">Générer</button>
@@ -334,12 +331,13 @@
                 <legend>Question</legend>
                 <input type="text" placeholder="Qui a ... ?" id="WGquestion">
             </fieldset>
-            <fieldset>
-                <legend>Nb de cartes : <span id="WGnb" class="blue">25</span></legend>
-                <input type="range" min="4" max="60" step="1" value="25" oninput="document.getElementById('WGnb').innerHTML=this.value;">
-            </fieldset>
             <section>
                 <button class="button--primary beaubutton" onclick="MM.createWhoGots();">Générer</button>
+            </section>
+        </div>
+        <div id="paramsdominos" class="hidden">
+            <section>
+                <button class="button--primary beaubutton" onclick="MM.createDominos();">Générer</button>
             </section>
         </div>
         </div>
