--- a/pagetoprint.html
+++ b/pagetoprint.html
@@ -18,7 +18,7 @@
     <body>
         <div id="creator-container">
             <section id="creator-menu">
-                <button onclick="window.print();">Print</button> vous pouvez imprimer en PDF
+                <button onclick="window.print();">Print</button> pour imprimer ou faire un pdf.
             </section>
             <section id="creator-content">
             
