--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <link rel="stylesheet" href="css/knacss.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/bulma-steps.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/mathsmentales.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="css/jsxgraph.css" type="text/css" />
+    <link rel="stylesheet" href="js/libs/JSXGprah1.2.2/jsxgraph.css" type="text/css" />
     <script src="js/libs/katex/katex.min.js" type="text/javascript" defer></script>
     <script src="js/libs/asciimath2tex/asciimath2tex.min.js"></script>
     <script src="js/libs/algebrite/algebrite.bundle-for-browser.js" type="text/javascript" defer></script>
     <script src="js/libs/bigjs/big.min.js" type="text/javascript" defer></script>
     <script src="js/libs/sortable/Sortable.js"></script>
     <script src="js/libs/seedrandom/seedrandom.min.js" type="text/javascript"></script>
-    <script src="js/libs/JSXGraph/jsxgraphcore.js"></script>
-    <script src="js/libs/JSXGraph/JessieScript.js"></script>
+    <script src="js/libs/JSXGprah1.2.2/jsxgraphcore.js"></script>
+    <!--<script src="js/libs/JSXGraph/JessieScript.js"></script>-->
     <script src="js/libs/scratchblocks/scratchblocks-v3.4-min.js"></script>
     <script src="js/libs/chartjs/Chart.bundle.min.js"></script>
     <script src="js/libs/underscore-min.js"></script>
