correction des xmlhttprequest => open true async

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="js/libs/seedrandom/seedrandom.min.js" type="text/javascript"></script>
     <script src="js/libs/JSXGprah1.2.2/jsxgraphcore.js"></script>
     <!--<script src="js/libs/JSXGraph/JessieScript.js"></script>-->
-    <script src="js/libs/scratchblocks/scratchblocks-v3.4-min.js"></script>
+    <!--<script src="js/libs/scratchblocks/scratchblocks-v3.4-min.js"></script>-->
     <script src="js/libs/chartjs/Chart.bundle.min.js"></script>
     <script src="js/libs/underscore-min.js"></script>
     <script src="js/libs/kas.js" defer></script>
@@ -162,7 +162,7 @@
                     </ul>
                 </section>
                 <section id="cart1" class="hidden">
-                    <button class="cart-close" onclick="MM.removeCart(2);" title="Supprimer le panier"><img src="img/burncart.png"></button>
+                    <button class="cart-close" onclick="MM.removeCart(2);" title="Supprimer le panier"><img src="img/burnCart.png"></button>
                     <button class="cart-close" onclick="MM.emptyCart(2);" title="Vider le panier"><img src="img/recyclecart.png"></button>
                     <h3 contenteditable="true" onblur="MM.carts[1].title = this.innerHTML;" title="Cliquer pour éditer">Groupe 2</h3>
                     <div class="totaux">
