--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!--<script src="js/libs/JSXGraph/JessieScript.js"></script>-->
     <!--<script src="js/libs/scratchblocks/scratchblocks-v3.4-min.js"></script>-->
     <script src="js/libs/chartjs/Chart.bundle.min.js"></script>
+    <script src="js/libs/qrious.min.js"></script>
     <script src="js/libs/underscore-min.js"></script>
     <script src="js/libs/kas.js" defer></script>
     <script src="js/MM1toMM2.min.js"></script>
@@ -174,7 +175,7 @@
                     </ul>
                 </section>
                 <section id="cart2" class="hidden">
-                    <button class="cart-close" onclick="MM.removeCart(3);" title="Supprimer le panier"><img src="img/burncart.png"></button>
+                    <button class="cart-close" onclick="MM.removeCart(3);" title="Supprimer le panier"><img src="img/burnCart.png"></button>
                     <button class="cart-close" onclick="MM.emptyCart(3);" title="Vider le panier"><img src="img/recyclecart.png"></button>
                     <h3 contenteditable="true" onblur="MM.carts[2].title = this.innerHTML;" title="Cliquer pour éditer">Groupe 3</h3>
                     <div class="totaux">
@@ -186,7 +187,7 @@
                     </ul>
                 </section>
                 <section id="cart3" class="hidden">
-                    <button class="cart-close" onclick="MM.removeCart(4);" title="Supprimer le panier"><img src="img/burncart.png"></button>
+                    <button class="cart-close" onclick="MM.removeCart(4);" title="Supprimer le panier"><img src="img/burnCart.png"></button>
                     <button class="cart-close" onclick="MM.emptyCart(4);" title="Vider le panier"><img src="img/recyclecart.png"></button>
                     <h3 contenteditable="true" onblur="MM.carts[3].title = this.innerHTML;" title="Cliquer pour éditer">Groupe 4</h3>
                     <div class="totaux">
